Bug : Unit Listing : Login Trap gets clipped if listing has less than 5 units

--- a/css/pages/section/pricing-section-unit-list.css
+++ b/css/pages/section/pricing-section-unit-list.css
@@ -531,10 +531,12 @@
 }
 
 .unit-list .phone-trap.show {
+	margin-bottom: 2.5rem;
+	height: 50.2rem;
 	visibility: visible;
 	pointer-events: auto;
 	box-shadow: 0px 0px 6px 2px rgba(45, 67, 81, .25);
-	transition: box-shadow .3s .3s ease-out;
+	transition: box-shadow .3s .3s ease-out, height 0.3s ease-out;
 }
 
 .unit-list .phone-trap * {
@@ -731,16 +733,22 @@
 }
 
 @media( min-width: 640px )  {
+	.unit-list .phone-trap.show {
+		height: 40.2rem;
+	}
 	.unit-list .phone-trap.show:before {
 		transform: scale(14);
 	}
 }
 
 @media( min-width: 1040px ) {
+
 	.unit-list .phone-trap {
 		padding: 32px;
 	}
-
+	.unit-list .phone-trap.show {
+		height: 41.1rem;
+	}
 	.unit-list .phone-trap.show:before {
 		transform: scale(18);
 	}
@@ -777,7 +785,9 @@
 	.unit-list .phone-trap {
 		padding: 40px;
 	}
-
+	.unit-list .phone-trap.show {
+		height: 46.5rem;
+	}
 	.unit-list .phone-trap.show:before {
 		transform: scale(20);
 	}
